--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -399,4 +399,4 @@ workflowSchedule:
   summary: "0 0 * * *"
   updateTemplate: "0 0 * * *"
   updates: "0 3 * * *"
-  uptime: "*/10 * * * *"
+  uptime: "0 */6 * * *"
